try to fix contrast issue

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
 /* Use of Psuedo classes*/  
 /* unvisited link */
 a:link {
-  color: #2844e6;
+  color: #ffffff;
 }
 /* visited link */
 a:visited {
